docs: Add comprehensive README with setup and installation instructions